--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="holder">
+		<div id="box">1</div>
+		<div id="box">2</div>
+		<div id="box">3</div>
+		<div id="box">4</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
